<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<groupId>nl.grauw</groupId>
	<artifactId>glass</artifactId>
	<version>0.7-SNAPSHOT</version>
	<packaging>jar</packaging>
	
	<name>Glass Z80 assembler</name>
	<description>A cross-platform Z80 assembler.</description>
	<url>http://www.grauw.nl/projects/glass/</url>
	<inceptionYear>2013</inceptionYear>
	
	<licenses>
		<license>
			<name>Simplified BSD</name>
			<url>https://github.com/grauw/glass/blob/main/LICENSE</url>
			<distribution>repo</distribution>
			<comments>This is a free software license.</comments>
		</license>
	</licenses>
	
	<organization>
		<name>Laurens Holst</name>
		<url>http://www.grauw.nl/</url>
	</organization>
	
	<scm>
		<connection>scm:git:https://github.com/grauw/glass.git</connection>
		<developerConnection>scm:git:ssh://git@github.com/grauw/glass.git</developerConnection>
		<url>https://github.com/grauw/glass</url>
	</scm>
	
	<properties>
		<mainClass>nl.grauw.glass.Assembler</mainClass>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
   
	<build>
		<resources>
			<resource>
				<directory>${basedir}</directory>
				<includes>
					<include>LICENSE</include>
					<include>NOTICE</include>
					<include>README.md</include>
				</includes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.9.0</version>
				<configuration>
					<source>25</source>
					<target>25</target>
					<release>25</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>buildnumber-maven-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
					<phase>validate</phase>
					<goals>
						<goal>create</goal>
					</goals>
					</execution>
				</executions>
				<configuration>
					<shortRevisionLength>8</shortRevisionLength>
					<revisionOnScmFailure>${maven.build.timestamp}</revisionOnScmFailure>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.2</version>
				<configuration>
					<archive>
						<manifest>
							<mainClass>${mainClass}</mainClass>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
						<manifestEntries>
							<Implementation-Version>${project.version} (${buildNumber})</Implementation-Version>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
			</plugin>
		</plugins>
	</build>
	
	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.8.2</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	
</project>